test/types/records/bad-change-type/range-init1.good
range-init1.chpl:1: In function 'test':
range-init1.chpl:4: error: cannot initialize a non-stridable range from a stridable range
